tests/snapshots/test_programs__reference_files@else.ovm.snap
---
source: tests/test_programs.rs
expression: test_output
input_file: tests/programs/else.ovm
---
status: 0
stdout:
  - "10"
stderr: []
