tests/snapshots/test_programs__reference_files@function.ovm.snap
---
source: tests/test_programs.rs
expression: test_output
input_file: tests/programs/function.ovm
---
status: 0
stdout:
  - "10"
stderr: []
