tests/snapshots/test_programs__reference_files@functions.ovm.snap
---
source: tests/test_programs.rs
expression: test_output
input_file: tests/programs/functions.ovm
---
status: 0
stdout:
  - "10"
  - "10"
stderr: []
