tests/snapshots/test_programs__reference_files@if.ovm.snap
---
source: tests/test_programs.rs
expression: test_output
input_file: tests/programs/if.ovm
---
status: 0
stdout:
  - "5"
stderr: []
