tests/snapshots/test_programs__reference_files@many_vars.ovm.snap
---
source: tests/test_programs.rs
expression: test_output
input_file: tests/programs/many_vars.ovm
---
status: 0
stdout:
  - "1"
  - "2"
  - "3"
stderr: []
